Resolved Allignment and Overlapping of Chatbox and Scroll-to-top button

--- a/src/components/ScrollToTop/ScrollToTopButton.module.css
+++ b/src/components/ScrollToTop/ScrollToTopButton.module.css
@@ -1,7 +1,7 @@
 .scrollToTop {
   position: fixed;
-  bottom: 20px;
-  right: 30px;
+  bottom: 48px;
+  left : 32px;
   z-index: 1000;
 }
 
